# Android-Crack

./: README.md
.github/workflows/: build-libbpf-sdk.yml
Common encryption and decryption algorithms/01/: base64_ollvm.apk  base64_ollvm_packer.apk
EdxposedTest/: settings.gradle
EdxposedTest/app/: build.gradle
EdxposedTest/app/src/main/cpp/: CMakeLists.txt  hook.cpp  hook.h  test_hook.cpp
EdxposedTest/app/src/main/cpp/elf/: elf.cpp
EdxposedTest/gradle/wrapper/: gradle-wrapper.properties
EdxposedTest/hooktarge/: build.gradle
EdxposedTest/nativehooktarget/: build.gradle
EdxposedTest/nativehooktarget/src/main/cpp/: CMakeLists.txt  test.cpp
arm64/: Android.mk  Application.mk  arm64.c  connect.sh  push.sh  start_server.sh
arm64/libs/arm64-v8a/: arm64
arm64/libs/armeabi-v7a/: arm64
call/: Android.mk  Application.mk  call.c  push.sh
call/libs/arm64-v8a/: call
conditionalCode/: Android.mk  conditional.c  connect.sh  push.sh
conditionalCode/libs/arm64-v8a/: conditional
ebpf/0x1C/: Makefile  lsm_prevent  lsm_prevent.bpf.c  lsm_prevent.c
ebpf/0x1C/.output/: lsm_prevent.skel.h
ebpf/0x2/: hello.c  hello.py
ebpf/0x3/: Makefile  hello.bpf.c
ebpf/0x4/: hello-buffer-config.py  hello-ring-buffer-config.py
ebpf/0x5/: Makefile  find-map  find-map.c  hello-buffer-config  hello-buffer-config.bpf.c  hello-buffer-config.c  hello-buffer-config.h  hello-buffer-config.skel.h
ebpf/0x6/: Makefile  hello-verifier  hello-verifier.bpf.c  hello-verifier.c  hello-verifier.h  hello-verifier.skel.h  out.dot
ebpf/0x8/: Makefile  hello.bpf.c  packet.h
ebpf/0xB/: libbpfapp.bpf.c  libbpfapp.c
ebpf/0xD/: opensnoop.c  vmlinux.h
ebpf/build-android-sdk/: build_libbpf_android_sdk.sh
elf/: CMakeLists.txt  build.sh  elf.c  ls  ls2  push.sh
frida/环境配置/: 环境配置.md
fridademos/Demo1/: demo1.js  settings.gradle
fridademos/Demo2/: demo2.js  settings.gradle
fridademos/Demo3/: demo4.js  demo4.py  settings.gradle
globalvar/: Android.mk  Application.mk  globalvar.c  push.sh
inlinehook/: Android.mk  build.sh  call  hookstub.s  inlinehook.c  push.sh  s.txt
ollvm/002/: deflat_cff.py  demo_cff  demo_normal
practice/p0/: readme.md
practice/p1/: 过程.md
practice/p10/: 过程.md
practice/p11/: 过程.md
practice/p15/: 1-lua  2-flower  4-ollvm
practice/p16/: 1-debug-android.apk
practice/p2/: 过程.md
practice/p20/: test.c
practice/p21/: ptrace1  size.cpp  vtable
practice/p3/: 过程.md
practice/p4/: 过程.md
practice/p5/: 过程.md
practice/p6/: 过程.md
practice/p7/: 算法特点.md  过程.md
practice/p8/: 过程.md
practice/p9/: 过程.md
scripts/: socket.js
scripts/functions_audit/: README.md  fn_audit.py  keywords_sample.json
unicorn/lv2/: lv2.py
unicorn/lv3/: androidemu.7z
unicorn/lv4/: lv4.py
(+88 files in other folders)
